youker-assistant (2.0.2) vivid; urgency=low

  * Add mate-desktop-environment settings.
  * Deal with system information for mate.
  * Add restore button for font.
  * Modify system info display model.
  * Add energy conserving model.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 10 Apr 2015 10:48:22 +0800

youker-assistant (2.0.1) vivid; urgency=low

  * Achieve low CPU occupancy rate.
  * Improve UI.
  * Fixed some bug.
  * Deal with system information access exception.
  * Deal with autostart Apps.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Mon, 23 Mar 2015 21:36:55 +0800

youker-assistant (2.0.0) vivid; urgency=low

  * New UI.
  * Fixed FileDialog and LoginDialog.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 20 Feb 2015 22:16:28 +0800

youker-assistant (1.3.3-0ubuntu1) vivid; urgency=low

  * Modify control and desktop file.
  * Display animation when cleaning up garbage.
  * Solve some problems about sso when network abnormal.
  * Add 3 OS rankings.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Sun, 04 Jan 2015 17:03:17 +0800

youker-assistant (1.3.2-0ubuntu1) vivid; urgency=low

  * Make it work normally when fisrt start(LP: #1373294).
  * Make icons on panel normally(LP: #1380938).
  * Make main page normally when double clicked the link Btn and the back Btn(LP: #1387927).
  * Shred big file normally(LP: #1373302).

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Tue, 30 Dec 2014 10:21:27 +0800

youker-assistant (1.3.1-0ubuntu1) utopic; urgency=low

  * Add cinnamon desktop settings.
  * Add Ubuntu Kylin SSO.
  * Connect Server with thread.
  * Make File Shredder work properly(LP: #1381382).

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 17 Oct 2014 10:42:04 +0800

youker-assistant (1.3.0-0ubuntu1) utopic; urgency=low

  * Support multiple languages.
  * Remove copyrighted images and download images from http server.
  * Add file shreder.
