@@ -159,6 +159,33 @@ QString ComputerPage::translatorSwitch(QString orgStr)
 //        return tr("POWER_SUPPLY_STATUS");
 //    else if(orgStr == "POWER_SUPPLY_VOLTAGE_MIN_DESIGN")//
 //        return tr("POWER_SUPPLY_VOLTAGE_MIN_DESIGN");
+    //    POWER_SUPPLY_CAPACITY_LEVEL
+    //    POWER_SUPPLY_CHARGE_FULL
+    //    POWER_SUPPLY_CHARGE_FULL_DESIGN
+    //    POWER_SUPPLY_CHARGE_NOW
+    //    POWER_SUPPLY_CURRENT_NOW
+    //    POWER_SUPPLY_PROP_STATUS
+    //    POWER_SUPPLY_PROP_CHARGE_TYPE
+    //    POWER_SUPPLY_PROP_HEALTH
+    //    POWER_SUPPLY_PROP_PRESENT,
+    //    POWER_SUPPLY_PROP_TECHNOLOGY,
+    //    POWER_SUPPLY_PROP_VOLTAGE_MAX_DESIGN,
+    //    POWER_SUPPLY_PROP_VOLTAGE_MIN_DESIGN,
+    //    POWER_SUPPLY_PROP_VOLTAGE_NOW,
+    //    POWER_SUPPLY_PROP_CAPACITY,
+    //    POWER_SUPPLY_PROP_CURRENT_NOW,
+    //    POWER_SUPPLY_PROP_CHARGE_FULL_DESIGN,
+    //    POWER_SUPPLY_PROP_TEMP,
+    //    POWER_SUPPLY_PROP_SYSTEM_TEMP_LEVEL
+    //    POWER_SUPPLY_ATTR
+    //    POWER_SUPPLY_CURRENT_MAX
+    //    SEQNUM
+    //    POWER_SUPPLY_CHARGING_ENABLED
+    //    POWER_SUPPLY_CHARGE_TYPE
+    //    POWER_SUPPLY_HEALTH
+    //    POWER_SUPPLY_VOLTAGE_MAX_DESIGN
+    //    POWER_SUPPLY_TEMP
+    //    POWER_SUPPLY_SYSTEM_TEMP_LEVEL
     else if(orgStr == "POWER_SUPPLY_MODEL_NAME")//型号
         return tr("Model");
     else if(orgStr == "POWER_SUPPLY_TECHNOLOGY")//技术
